# nbodysim

./: Cargo.toml
src/: galaxygen.rs  main.rs  render.rs
