[package]
name = "nbodysim"
version = "1.0.0"
authors = ["timokoesters <timo@koesters.xyz>", "Mattis Bergmann"]
edition = "2021"

[dependencies]
winit = { version = "0.29.4", features = ["rwh_05"] }
wgpu = { version = "0.17.0", features = ["spirv"] }
raw-window-handle = "0.6.0"
rand = "0.8.5"
rand_distr = "0.4.3"
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }
glyphon = "0.3.0"
pollster = "0.3.0"
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = { version = "0.24.2", features = ["bytemuck"] }
anyhow = "1.0.75"

[build-dependencies]
glsl-to-spirv = "0.1.7"
